# Pharmaceutical-medicine-inspection-packaging-Simulation-Under-Linux

Project3/: CMakeLists.txt  Dockerfile  arguments.txt  constants.h  docker-compose.yml  functions.h  header.h  liquidline  liquidline.c  main  main.c  makefile  manager  manager.c  message_queues.h  opengl  opengl.c  pillline  pillline.c  run.sh  semaphores.h  shared_memories.h  timer  timer.c
